fix: project ticket grid too much middle space
Designers do not intend nor like big gap. It's been around since Portal.

But it's been so difficult to fix… until  `project-ticket-grid` came.

I hadn't noticed the fix was possible until just now.

--- a/apps/tup-ui/src/pages/Dashboard/Dashboard.module.css
+++ b/apps/tup-ui/src/pages/Dashboard/Dashboard.module.css
@@ -44,8 +44,8 @@
   display: grid;
   gap: 25px;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas: 
+  grid-template-rows: auto 1fr;
+  grid-template-areas:
     "projects"
     "tickets";
 
